--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
-    "redux-form-website-template": "^0.0.41"
+    "redux-form-website-template": "^0.0.41",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
